# v0

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  PATCH.md  README.md  TRADEMARK.md  demo.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  domain_request.yml  enterprise_ask.yml  feature_request.yml
.github/workflows/: tests.yml
agents/cartography/: AGENTS.md  SOUL.md  TOOLS.md
agents/data-processing/: AGENTS.md  SOUL.md  TOOLS.md
agents/data-retrieval/: AGENTS.md  SOUL.md  TOOLS.md
agents/lead-analyst/: AGENTS.md  SOUL.md  TOOLS.md
agents/peer-reviewer/: AGENTS.md  SOUL.md  TOOLS.md
agents/report-writer/: AGENTS.md  SOUL.md  TOOLS.md
agents/site-publisher/: AGENTS.md  SOUL.md  TOOLS.md
agents/spatial-stats/: AGENTS.md  SOUL.md  TOOLS.md
agents/validation-qa/: AGENTS.md  SOUL.md  TOOLS.md
analyses/: README.md
analyses/demo-chicago-food-access/: render_food_access_map.py
config/: chart_styles.json  data-freshness-schedule.json  data_sources.json  map_styles.json  palettes.json  reanalysis-triggers.json
config/scoring/: poi_default_weights.md
demos/sedgwick-poverty/: preview.html  sedgwick_poverty_tracts.gpkg
docs/architecture/: ACTIVE_TEAM.md  AGENT_CONTRACT_TEMPLATE.md  ARCHITECTURE.md  CAPABILITY_ROADMAP.md  DATA_REUSE_POLICY.md  MODEL_ROUTING.md  OSS_RELEASE_PLAN.md  PIPELINE_CANON.md  ROADMAP.md  TOOL_GOVERNANCE.md
docs/decisions/: 0001-qgis-project-file-format.md  README.md
docs/extending/: ADDING_DATA_SOURCES.md  CONNECTING_INFRASTRUCTURE.md  CUSTOMIZING_PIPELINE.md  PUBLISHING_ADAPTERS.md  README.md
docs/guides/: ANALYST_GUIDE.md  INSTALL.md  PROJECT_START_GUIDE.md  RUNTIMES.md  TROUBLESHOOTING.md  WHAT_THE_OUTPUTS_MEAN.md  WHEN_TO_TRUST_THE_RESULTS.md
docs/handbooks/: STATUS_LEDGER.md  field-data-guide.md
docs/memory/: README.md
docs/reference/: ANALYSIS_CATALOG.md  CONFIG_REFERENCE.md  MACHINE_REQUIREMENTS.md  PIPELINE_STANDARDS.md  QGIS_PROJECT_CONTRACT.md  QGIS_REVIEW_GUIDE.md  TEAM.md  WORKSPACE_MODEL.md
docs/wiki/: README.md
scripts/: README.md  demo.py
scripts/core/: analyze_bivariate.py  analyze_choropleth.py  analyze_dot_density.py  analyze_proportional_symbols.py  analyze_small_multiples.py  analyze_spatial_regression.py  analyze_summary_stats.py  analyze_top_n.py  analyze_uncertainty.py  animate_time_series.py  aprx_scaffold.py  audit_delegation.py  batch_join.py  build_project_inventory.py  build_solution_graph.py  check_colorblind.py  check_data_freshness.py  check_memory_status.py  check_pipeline_status.py  check_reanalysis_needed.py  check_report_sensitivity.py  collect_report_assets.py  compare_projects.py  compute_change_detection.py  compute_hotspots.py  compute_isochrones.py  compute_network_distance.py  compute_rate.py  compute_spatial_autocorrelation.py  compute_trade_areas.py  contour_generation.py  create_run_plan.py  derive_fields.py  enrich_points.py  extract_archive.py  fetch_acs_data.py  fetch_bls_employment.py  fetch_cdc_places.py  fetch_census_population.py  fetch_ejscreen.py  (+84 more)
scripts/future/: annotate_analysis.py  build_performance_dashboard.py  check_qgis_environment.py  compute_service_areas.py  db_manager.py  generate_proposal.py  ingest_field_survey.py  interpolation.py  (+7 more)
site/: index.html
templates/: project_brief.json
tests/: conftest.py  schemas.py  test_acceptance.py  test_handoff_contracts.py  test_isolation.py  test_pipeline_stages.py  test_qgis_package.py  test_renderer_parity.py  test_script_interface.py
(+245 files in other folders)
